# datalake-sdk

./: .coveragerc  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: cd.yaml  ci.yaml
tests/: test_clients.py  test_contracts.py  test_insert.py  test_serializers.py  test_validator.py
weni-datalake-sdk/clients/: client.py  insert.py
weni-datalake-sdk/paths/: msg_path.py
weni/clients/: client.py  dl_manager_client.py
weni/paths/: validator.py
weni_datalake_sdk/clients/: __init__.py  client.py  commerce_webhook_pb2.py  commerce_webhook_pb2_grpc.py  dl_manager_client.py  events_pb2.py  events_pb2_grpc.py  insert.py  message_templates_pb2.py  message_templates_pb2_grpc.py  msgs_pb2.py  msgs_pb2_grpc.py  traces_pb2.py  traces_pb2_grpc.py
weni_datalake_sdk/clients/proto/: commerce_webhook.proto  message_templates.proto  traces.proto
weni_datalake_sdk/clients/redshift/: events.py  installed_apps.py  message_templates.py  redshift_client.py  traces.py
weni_datalake_sdk/paths/: __init__.py  base_path.py  commerce_webhook.py  events_path.py  message_template_path.py  message_template_status_path.py  msg_path.py  trace_path.py  validator.py
weni_datalake_sdk/tests/: test_clients.py  test_commerce_webhook.py  test_events.py  test_installed_apps.py  test_message_templates.py  test_paths.py  test_redshift_client.py  test_validator.py
weni_datalake_sdk/utils/: exceptions.py
