[tool.poetry]
name = "datalake-sdk"
version = "0.1.0"
description = "Lib to connect python/django modules to redshift"
authors = ["Lucas Linhares <lucas.linhares@vtex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
boto3 = "^1.28"  # Cliente AWS para Redshift
pytest = "^7.4"  # Para testes
moto = "^4.1"  # Para mock do boto3

[tool.poetry.dev-dependencies]
black = "^23.1.0"  # Para formatação de código
flake8 = "^6.0.0"  # Para linting
isort = "^5.12.0"  # Para organização de imports

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
