[tool.poetry]
name = "datalake-sdk"
version = "0.1.0"
description = "Lib to connect python/django modules to redshift"
authors = ["Lucas Linhares <lucas.linhares@vtex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
boto3 = "^1.28"
pytest = "^7.4"
moto = "^4.1

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
