[tool.poetry]
packages = [{ include = "weni_datalake_sdk" }]
name = "weni-datalake-sdk"
version = "0.2.0"
description = "Lib to connect python/django modules to redshift"
authors = ["Lucas Linhares <lucas.linhares@vtex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
boto3 = "^1.28"
pytest = "^7.4"
moto = "^4.1"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
grpcio-health-checking = "^1.71.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest-cov = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
